--- a/CoollEventsWebApp/CoollEventsWebApp/Views/meusconvites/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/meusconvites/Index.cshtml
@@ -170,7 +170,7 @@
                         <div class="eventoNome"> <b>@Convite.Nome  </b> </div>
                         <div class="eventoData">  <i>@Convite.DataEvento.ToString() </i> </div>
                         <div style="margin-top: 2vh;" class="linkss">
-                            <a href="/evento?e=@Convite.Id_evento" class="verevento">Ver evento</a>
+                            <a href="/evento?id=@Convite.Id_evento" class="verevento">Ver evento</a>
                             <a href="/aceitarconvite?evento=@Convite.Id_evento" class="aceitarconvite">Aceitar convite</a>
                         </div>
                     </div>
