--- a/CoollEventsWebApp/CoollEventsWebApp/Views/Editar/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/Editar/Index.cshtml
@@ -66,7 +66,7 @@
                     <input class="input-edit" id="Sobrenome" name="Sobrenome" value="@Model.Sobrenome" />
                 </div>
                 <div class="itemPerfil">
-                    <h2 style="text-align: left; font-size: 1.2rem"> Sobrenome </h2>
+                    <h2 style="text-align: left; font-size: 1.2rem"> Apelido </h2>
                     <input class="input-edit" id="Apelido" name="Apelido" value="@Model.Apelido" />
                 </div>
                 @*<div style="margin-top: 5vh;">
