--- a/CoollEventsWebApp/CoollEventsWebApp/Views/coollayout.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/coollayout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
+    <link rel="icon" href="/Resources/ico.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
